--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,9 @@ This is my landlady's cat Grisou who is super adorable.
 
 We can try to use html code to format the image instead of using rmd language. 
 
+<center>
 <img src="images/Grisou.jpg" style="width:25%">
+</center>
 
 ```{r}
 library(tidyverse)
